added arabic support

--- a/app/src/main/res/layout/calcmethod_dialog.xml
+++ b/app/src/main/res/layout/calcmethod_dialog.xml
@@ -29,15 +29,15 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginBottom="5dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:layout_marginTop="5dp"
             android:background="#000000"/>
 
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp">
+            android:layout_marginStart="10dp">
 
         <TextView
                 android:layout_width="0dp"
@@ -56,7 +56,7 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp">
+            android:layout_marginStart="10dp">
 
         <TextView
                 android:layout_width="0dp"
