--- a/app/src/main/res/layout/vakit_notpopup.xml
+++ b/app/src/main/res/layout/vakit_notpopup.xml
@@ -25,8 +25,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"/>
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"/>
 
     <TextView
             android:id="@+id/name"
