--- a/app/src/main/res/layout/calcmethod_dlgitem.xml
+++ b/app/src/main/res/layout/calcmethod_dlgitem.xml
@@ -19,7 +19,7 @@
               android:layout_height="fill_parent"
               android:orientation="vertical"
               android:paddingBottom="5dp"
-              android:paddingLeft="10dp"
+              android:paddingStart="10dp"
               android:paddingTop="5dp">
 
     <TextView
@@ -31,7 +31,7 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="5dp"
+            android:paddingStart="5dp"
             android:textColor="#444444"
             android:textSize="12sp"/>
 
