--- a/app/src/main/res/layout/names_item.xml
+++ b/app/src/main/res/layout/names_item.xml
@@ -23,8 +23,8 @@
     <LinearLayout
             android:background="#ffffff"
             android:translationZ="2dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
 
@@ -63,8 +63,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="5dip"
-                android:layout_marginRight="5dip"
+                android:layout_marginStart="5dip"
+                android:layout_marginEnd="5dip"
                 android:gravity="center"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="#707070"/>
