--- a/app/src/main/res/layout/notification_layout.xml
+++ b/app/src/main/res/layout/notification_layout.xml
@@ -24,8 +24,8 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp">
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp">
 
         <TextView
                 android:textSize="14sp"
