--- a/app/src/main/res/layout/tesbihat_main.xml
+++ b/app/src/main/res/layout/tesbihat_main.xml
@@ -32,8 +32,8 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:background="#ffffff"
-            android:paddingLeft="10dip"
-            android:paddingRight="10dip"/>
+            android:paddingStart="10dip"
+            android:paddingEnd="10dip"/>
 
 
 </LinearLayout>
