--- a/app/src/main/res/layout/vakit_fragment.xml
+++ b/app/src/main/res/layout/vakit_fragment.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true">
+        android:layout_alignParentEnd="true">
 
     <TextView
             android:id="@+id/kerahat"
@@ -77,7 +77,7 @@
             android:id="@+id/imsak"
             app:layout_widthPercent="50%"
             app:layout_heightPercent="8%"
-            android:paddingLeft="50dp"
+            android:paddingStart="50dp"
             android:fontFamily="sans-serif-light"
             android:text="@string/fajr"/>
 
@@ -86,10 +86,10 @@
             android:id="@+id/imsaktime"
             app:layout_widthPercent="50%"
             app:layout_heightPercent="8%"
-            android:paddingRight="50dp"
+            android:paddingEnd="50dp"
             android:text="00:00"
-            android:gravity="right"
-            android:layout_alignParentRight="true"
+            android:gravity="end"
+            android:layout_alignParentEnd="true"
             android:fontFamily="sans-serif-thin"/>
 
     <com.metinkale.prayerapp.custom.AutoResizeTextView
@@ -97,7 +97,7 @@
             android:id="@+id/gunes"
             app:layout_widthPercent="50%"
             app:layout_heightPercent="8%"
-            android:paddingLeft="50dp"
+            android:paddingStart="50dp"
             android:fontFamily="sans-serif-light"
             android:text="@string/sun"/>
 
@@ -106,10 +106,10 @@
             android:id="@+id/gunestime"
             app:layout_widthPercent="50%"
             app:layout_heightPercent="8%"
-            android:paddingRight="50dp"
+            android:paddingEnd="50dp"
             android:text="00:00"
-            android:gravity="right"
-            android:layout_alignParentRight="true"
+            android:gravity="end"
+            android:layout_alignParentEnd="true"
             android:fontFamily="sans-serif-thin"/>
 
     <com.metinkale.prayerapp.custom.AutoResizeTextView
@@ -117,7 +117,7 @@
             android:id="@+id/ogle"
             app:layout_widthPercent="50%"
             app:layout_heightPercent="8%"
-            android:paddingLeft="50dp"
+            android:paddingStart="50dp"
             android:fontFamily="sans-serif-light"
             android:text="@string/zuhr"/>
 
@@ -126,10 +126,10 @@
             android:id="@+id/ogletime"
             app:layout_widthPercent="50%"
             app:layout_heightPercent="8%"
-            android:paddingRight="50dp"
+            android:paddingEnd="50dp"
             android:text="00:00"
-            android:gravity="right"
-            android:layout_alignParentRight="true"
+            android:gravity="end"
+            android:layout_alignParentEnd="true"
             android:fontFamily="sans-serif-thin"/>
 
     <com.metinkale.prayerapp.custom.AutoResizeTextView
@@ -137,7 +137,7 @@
             android:id="@+id/ikindi"
             app:layout_widthPercent="50%"
             app:layout_heightPercent="8%"
-            android:paddingLeft="50dp"
+            android:paddingStart="50dp"
             android:fontFamily="sans-serif-light"
             android:text="@string/asr"/>
 
@@ -146,10 +146,10 @@
             android:id="@+id/ikinditime"
             app:layout_widthPercent="50%"
             app:layout_heightPercent="8%"
-            android:paddingRight="50dp"
+            android:paddingEnd="50dp"
             android:text="00:00"
-            android:gravity="right"
-            android:layout_alignParentRight="true"
+            android:gravity="end"
+            android:layout_alignParentEnd="true"
             android:fontFamily="sans-serif-thin"/>
 
     <com.metinkale.prayerapp.custom.AutoResizeTextView
@@ -157,7 +157,7 @@
             android:id="@+id/aksam"
             app:layout_widthPercent="50%"
             app:layout_heightPercent="8%"
-            android:paddingLeft="50dp"
+            android:paddingStart="50dp"
             android:fontFamily="sans-serif-light"
             android:text="@string/maghrib"/>
 
@@ -166,10 +166,10 @@
             android:layout_below="@id/ikindi"
             app:layout_widthPercent="50%"
             app:layout_heightPercent="8%"
-            android:paddingRight="50dp"
+            android:paddingEnd="50dp"
             android:text="00:00"
-            android:gravity="right"
-            android:layout_alignParentRight="true"
+            android:gravity="end"
+            android:layout_alignParentEnd="true"
             android:fontFamily="sans-serif-thin"/>
 
     <com.metinkale.prayerapp.custom.AutoResizeTextView
@@ -177,7 +177,7 @@
             android:id="@+id/yatsi"
             app:layout_widthPercent="50%"
             app:layout_heightPercent="8%"
-            android:paddingLeft="50dp"
+            android:paddingStart="50dp"
             android:fontFamily="sans-serif-light"
             android:text="@string/ishaa"/>
 
@@ -186,10 +186,10 @@
             android:id="@+id/yatsitime"
             app:layout_widthPercent="50%"
             app:layout_heightPercent="8%"
-            android:paddingRight="50dp"
+            android:paddingEnd="50dp"
             android:text="00:00"
-            android:gravity="right"
-            android:layout_alignParentRight="true"
+            android:gravity="end"
+            android:layout_alignParentEnd="true"
             android:fontFamily="sans-serif-thin"/>
 
 
@@ -209,10 +209,10 @@
             android:id="@+id/source2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_below="@+id/kerahat"
-            android:layout_marginLeft="5dip"
-            android:layout_marginRight="5dip"
+            android:layout_marginStart="5dip"
+            android:layout_marginEnd="5dip"
             android:layout_marginTop="5dp"
             android:contentDescription="@string/appName"/>
 
@@ -222,10 +222,10 @@
             android:id="@+id/source1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_below="@+id/kerahat"
-            android:layout_marginLeft="5dip"
-            android:layout_marginRight="5dip"
+            android:layout_marginStart="5dip"
+            android:layout_marginEnd="5dip"
             android:layout_marginTop="5dp"
             android:contentDescription="@string/appName"/>
 
