--- a/app/src/main/res/layout/vakit_sort_item.xml
+++ b/app/src/main/res/layout/vakit_sort_item.xml
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/source"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:textAppearance="?android:attr/textAppearanceMedium"/>
 
 
@@ -38,7 +38,7 @@
             android:id="@+id/source"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"/>
 
     <ImageView
