--- a/app/src/main/res/layout/zikr_main.xml
+++ b/app/src/main/res/layout/zikr_main.xml
@@ -34,8 +34,8 @@
     <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:layout_weight="1"
             android:gravity="center">
 
