--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,7 +9,7 @@
   ~     http://www.apache.org/licenses/LICENSE-2.0
   ~
   ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ distributed under the Licenwse is distributed on an "AS IS" BASIS,
   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
@@ -17,4 +17,12 @@
 
 <resources>
     <dimen name="dimen4dp">4dp</dimen>
+
+    <dimen name="app_defaultsize_w">632.0dip</dimen>
+
+    <dimen name="app_defaultsize_h">598.0dip</dimen>
+
+    <dimen name="app_minimumsize_w">632.0dip</dimen>
+
+    <dimen name="app_minimumsize_h">598.0dip</dimen>
 </resources>
