--- a/app/src/main/res/xml/vakit_widget_clock2.xml
+++ b/app/src/main/res/xml/vakit_widget_clock2.xml
@@ -19,7 +19,7 @@
                     android:configure="com.metinkale.prayerapp.vakit.WidgetConfigureClock"
                     android:minHeight="100dp"
                     android:minWidth="100dp"
-                    android:previewImage="@drawable/widget_clock"
+                    android:previewImage="@drawable/widget_clock2"
                     android:resizeMode="horizontal|vertical"
                     android:updatePeriodMillis="6000"
                     android:widgetCategory="keyguard|home_screen">
